--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "node-demo",
   "version": "0.0.1",
   "scripts": {
-    "test": "make test"
+    "test": "make test",
+    "coveralls": "nyc --exclude-node-modules=false --reporter=text-lcov npm run test | coveralls"
   },
   "devDependencies": {
     "coveralls": "3.1.0",
@@ -10,6 +11,7 @@
     "jshint": "^2.11.0",
     "mocha": "^7.1.1",
     "mocha-lcov-reporter": "1.2.0",
+    "nyc": "^15.1.0",
     "should": "9.0.2"
   },
   "engines": {
@@ -18,5 +20,8 @@
   "main": "index.js",
   "directories": {
     "test": "test"
+  },
+  "dependencies": {
+    "vulnerable-package": "github:nickmerwin/vulnerable-package"
   }
 }
